Finalização API de usuários
